syntax = "proto3";

package org.project_planton.provider.kubernetes;

import "buf/validate/validate.proto";

/**
 * **KubernetesSecretKeyRef** is a reference to a specific key within a Kubernetes Secret.
 * This allows components to retrieve sensitive values from existing secrets rather than
 * storing them as plain text in the configuration.
 */
message KubernetesSecretKeyRef {
  /**
   * The namespace of the Kubernetes Secret.
   * If not specified, defaults to the namespace where the component is deployed.
   * Note: Cross-namespace secret references may not be supported by all Helm charts.
   */
  string namespace = 1;

  /**
   * The name of the Kubernetes Secret.
   */
  string name = 2 [(buf.validate.field).required = true];

  /**
   * The key within the Kubernetes Secret that contains the value.
   */
  string key = 3 [(buf.validate.field).required = true];
}

/**
 * **KubernetesSensitiveValue** represents a sensitive value that can be provided either
 * as a literal string or as a reference to a Kubernetes Secret.
 *
 * Using secret references is recommended for production deployments to avoid storing
 * sensitive values in plain text within configuration files or version control.
 */
message KubernetesSensitiveValue {
  oneof sensitive_value {
    /**
     * A literal string value.
     * Warning: Using plain text for sensitive values is not recommended for production.
     * Consider using secret_ref instead.
     */
    string value = 1;

    /**
     * A reference to a key within a Kubernetes Secret.
     * The secret must exist in the cluster before the component is deployed.
     */
    KubernetesSecretKeyRef secret_ref = 2;
  }
}
